@startuml

title __WEATHERAPP's Class Diagram__\n

  namespace com.orange {
    class com.orange.MainApplication {
    }
  }
  

  namespace com.orange {
    namespace controllers {
      class com.orange.controllers.controller {
      }
    }
  }
  

  namespace com.orange {
    namespace models {
      class com.orange.models.Astro {
      }
    }
  }
  

  namespace com.orange {
    namespace models {
      class com.orange.models.Condition {
      }
    }
  }
  

  namespace com.orange {
    namespace models {
      class com.orange.models.Condition_ {
      }
    }
  }
  

  namespace com.orange {
    namespace models {
      class com.orange.models.Condition__ {
      }
    }
  }
  

  namespace com.orange {
    namespace models {
      class com.orange.models.Current {
      }
    }
  }
  

  namespace com.orange {
    namespace models {
      class com.orange.models.Day {
      }
    }
  }
  

  namespace com.orange {
    namespace models {
      class com.orange.models.Forecast {
      }
    }
  }
  

  namespace com.orange {
    namespace models {
      class com.orange.models.Forecastday {
      }
    }
  }
  

  namespace com.orange {
    namespace models {
      class com.orange.models.Hour {
      }
    }
  }
  

  namespace com.orange {
    namespace models {
      class com.orange.models.Location {
      }
    }
  }
  

  namespace com.orange {
    namespace services {
      class com.orange.services.WeatherService {
      }
    }
  }
  

  namespace src.main.java.com.orange {
    class src.main.java.com.orange.MainApplication {
    }
  }
  

  namespace src.main.java.com.orange {
    namespace controllers {
      class src.main.java.com.orange.controllers.controller {
      }
    }
  }
  

  namespace src.main.java.com.orange {
    namespace models {
      class src.main.java.com.orange.models.Astro {
      }
    }
  }
  

  namespace src.main.java.com.orange {
    namespace models {
      class src.main.java.com.orange.models.Condition {
      }
    }
  }
  

  namespace src.main.java.com.orange {
    namespace models {
      class src.main.java.com.orange.models.Condition_ {
      }
    }
  }
  

  namespace src.main.java.com.orange {
    namespace models {
      class src.main.java.com.orange.models.Condition__ {
      }
    }
  }
  

  namespace src.main.java.com.orange {
    namespace models {
      class src.main.java.com.orange.models.Current {
      }
    }
  }
  

  namespace src.main.java.com.orange {
    namespace models {
      class src.main.java.com.orange.models.Day {
      }
    }
  }
  

  namespace src.main.java.com.orange {
    namespace models {
      class src.main.java.com.orange.models.Forecast {
      }
    }
  }
  

  namespace src.main.java.com.orange {
    namespace models {
      class src.main.java.com.orange.models.Forecastday {
      }
    }
  }
  

  namespace src.main.java.com.orange {
    namespace models {
      class src.main.java.com.orange.models.Hour {
      }
    }
  }
  

  namespace src.main.java.com.orange {
    namespace models {
      class src.main.java.com.orange.models.Location {
      }
    }
  }
  

  namespace src.main.java.com.orange {
    namespace services {
      class src.main.java.com.orange.services.WeatherService {
      }
    }
  }
  

  com.orange.MainApplication -up-|> javafx.application.Application
  com.orange.controllers.controller .up.|> javafx.fxml.Initializable
  com.orange.models.Current o-- com.orange.models.Condition : condition
  com.orange.models.Day o-- com.orange.models.Condition__ : condition
  com.orange.models.Forecastday o-- com.orange.models.Astro : astro
  com.orange.models.Forecastday o-- com.orange.models.Day : day
  com.orange.models.Hour o-- com.orange.models.Condition_ : condition


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
